# Simple-Rich-Trading-Journal

./: .gitattributes  .gitignore  README.md  config.example.yaml  pyproject.toml  setup-deps.sh
src/SimpleRichTradingJournal/: README.md  cli.py  config.example.yaml  config.yaml  main.py
src/SimpleRichTradingJournal/__env__/: __init__.py  _files.py  autoclean.py  cache_manager.py  data_manager.py  path_manager.py  plugin.py  profile_manager.py  rconfig.py  server_manager.py  startup.py  ui_utils.py
src/SimpleRichTradingJournal/__ini__/: cmdl.py  logtags.py
src/SimpleRichTradingJournal/calc/: log.py  utils.py
src/SimpleRichTradingJournal/callbacks/: __init__.py  autocomplete.py  clientside.py  columnstate.py  courseupdate.py  exiting.py  main.py  note.py  onoffbuttons.py  openmodal.py  scopes.py  wingrid.py
src/SimpleRichTradingJournal/config/: __init__.py  loader.py  models.py
src/SimpleRichTradingJournal/config/functional/: log_columns.py  performance_trailing.py
src/SimpleRichTradingJournal/config/imgs/: __init__.py
src/SimpleRichTradingJournal/config/styles/: __init__.py  balance.py  figures.py  log.py  misc.py  note.py
src/SimpleRichTradingJournal/core/: calc.py  utils.py
src/SimpleRichTradingJournal/layout/: __init__.py  about.py  autocomplet.py  balance.py  exiting.py  header.py  history.py  log.py  modal.py  note.py  statistics.py
src/SimpleRichTradingJournal/layout/make/: __init__.py  footer.py  history.py
src/SimpleRichTradingJournal/layout/make/balance/: balance.py
src/SimpleRichTradingJournal/layout/make/statistics/: __init__.py  performance.py  positions.py
src/SimpleRichTradingJournal/storage/: __init__.py  adapter.py  backends.py  config.py  factory.py  interface.py  models.py  plugins.py  repository.py
src/SimpleRichTradingJournal/things/: .gitignore  __init__.py
src/SimpleRichTradingJournal/ui/: components.py  layout.py  layouts.py
src/SimpleRichTradingJournal/ui/themes/: blank.yaml  dark.yaml  light.yaml
