[tool.poetry]
name = "SimpleRichTradingJournal"
version = "0.7.0"
description = "Simple Rich Trading Journal"
authors = [
    {name = "Adrian F. Hoefflin", email = "srccircumflex-srtj@outlook.com"},
    {name = "Steven Van Ingelgem", email = "steven@vaningelgem.be"},
]
license = "CC BY-NC-ND 4.0"
readme = "README.md"
repository = "https://github.com/svaningelgem/srtj"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
keywords = [
    "trading", "trading journal", "trading log", "trading protocol",
    "finance", "finance journal", "finance log", "finance protocol"
]
[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0"
click = "^8.1"
logprise = "^0.1"
dash = "^2.14"
dash-ag-grid = "^25.0"
plotly = "^5.17"
datetime = "^4.0"  # For zone-aware handling
alembic = {optional = true}  # For future migrations, not used now

[tool.poetry.extras]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
srtj = "SimpleRichTradingJournal.main:run"

[project.urls]
Homepage = "https://simple-rich-trading-journal.github.io"
Documentation = "https://simple-rich-trading-journal.github.io"
Repository = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal"
Issues = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal/issues"
Changelog = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal#version-history"