[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleRichTradingJournal"
version = "0.6.2.1"
authors = [
    {name = "Adrian F. Hoefflin", email = "srccircumflex-srtj@outlook.com"},
]
description = "Rich Trading Journal"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
keywords = [
    "trading", "trading journal", "trading log", "trading protocol",
    "finance", "finance journal", "finance log", "finance protocol"
]
license = {text = "CC BY-NC-ND 4.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
dependencies = [
    "plotly>=5.18.0",
    "dash>=2.16.1",
    "numpy>=1.26.3",
    "dash_ag_grid>=31.0.1",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "SimpleRichTradingJournal.__version__"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"

[project.scripts]
srtj = "SimpleRichTradingJournal.main:run"

# [project.gui-scripts]
# srtj = "SimpleRichTradingJournal.main:run"

# [project.optional-dependencies]
# gui = ["PyQt6"]

[project.urls]
Homepage = "https://simple-rich-trading-journal.github.io"
Documentation = "https://simple-rich-trading-journal.github.io"
Repository = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal"
Issues = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal/issues"
Changelog = "https://github.com/Simple-Rich-Trading-Journal/Simple-Rich-Trading-Journal#version-history"

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
    "E",  # pycodestyle/flake8
    "W",  # "
    "F",  # pyflakes
    "C",  # mccabe
    "I",  # isort
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "N",  # pep8-naming
    "ANN",  # flake8-annotations
    "A",  # flake8-builtins
    "COM",  # flake8-comma
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",  # flake8-logging-format
    ##    "INP",  # flake8-no-pep420
    #    "PIE",  # flake8-pie
    "T20",  # flake8-print
    #    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "RET",  # flake8-return
    #    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    #    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    #    "PD",  # pandas-vet
    "PL",  # pylint
    #    "FLY",  # flynt
    #    "NPY",  # NumPy-specific rules
    #    "AIR",  # Airflow
    #    "PERF",  # Perflint
    ##    "FURB",  # refurb
    ##    "LOG",  # flake8-logging
    "RUF",  # Ruff-specific rules
    "UP",  # pyupgrade

    "PTH",  # flake8-use-pathlib
    # "ERA",  # eradicate
    # "TRY", # tryceratops
]

ignore = [
    "ISC001",
    "COM812",
    "SIM108",  # Use ternary operator `...` instead of `if`-`else`-block
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = false
